add utility mixins

--- a/asset/main.scss
+++ b/asset/main.scss
@@ -4,6 +4,9 @@
 @import 'vendor/slick/style/slick';
 @import 'vendor/slick/style/slick-theme';
 
+/*base--*/
+@import 'style/base';
+
 /*kodein--*/
 @import 'style/animate';
 @import 'style/kodein';
